--- a/irrigreatapp/templates/blogbase.html
+++ b/irrigreatapp/templates/blogbase.html
@@ -30,7 +30,14 @@
     <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <style>
+        .img-fluid {
+            max-width: 100%;
+            width: 100%;
+            height: 493px;
+            object-fit: cover;
+            }
+    </style>
 </head>
 <body>
 {% include 'headNav.html' %}
