--- a/adminapp/templates/sellingitems.html
+++ b/adminapp/templates/sellingitems.html
@@ -39,7 +39,7 @@
                     {% for p in productObj %}
                     <tr>
                         <td class="">{{ p.farmerName }}</td>
-<!--                        <td class="">{{ farmerName }}</td>-->
+<!--                        <td class="">{{ p.farmers }}</td>-->
                         <td class="">{{ p.productName }}</td>
                         <td class="">{{ p.qty }}</td>
                         <td class="">{{ p.price }}</td>
