Select text disabled

--- a/irrigreatapp/templates/blogbase.html
+++ b/irrigreatapp/templates/blogbase.html
@@ -31,12 +31,21 @@
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
+        *{
+              -webkit-touch-callout: none; /* iOS Safari */
+              -webkit-user-select: none; /* Safari */
+              -khtml-user-select: none; /* Konqueror HTML */
+              -moz-user-select: none; /* Old versions of Firefox */
+              -ms-user-select: none; /* Internet Explorer/Edge */
+              user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
+        }
         .img-fluid {
             max-width: 100%;
             width: 100%;
             height: 493px;
             object-fit: cover;
             }
+
     </style>
 </head>
 <body>
