add timeline Page
...to show all post

--- a/irrigreatapp/templates/showAllPost.html
+++ b/irrigreatapp/templates/showAllPost.html
@@ -7,7 +7,7 @@
                 <img class="img-xs rounded-circle"
                      src="http://127.0.0.1:8000/media/{{username.image}}" alt="">
                 <div class="ms-2">
-                    <p class="mb-0">{{username.fname}} {{username.lname}}</p>
+                    <p class="mb-0">{{p.Blogger.fname}} {{username.lname}}</p>
                     <p class="tx-11 text-muted mb-0">{{p.creatDate.date}}</p>
                 </div>
             </div>
