Fix Timeline Page

--- a/irrigreatapp/templates/headNav.html
+++ b/irrigreatapp/templates/headNav.html
@@ -139,7 +139,7 @@ body {
 </style>
 
 
-<nav class="navbar navbar-expand-xl navbar-light bg-light">
+<nav class="navbar navbar-expand-xl navbar-light bg-light" style="position:absolute; top:0;z-index:10;width:100%">
     <a href="#" class="navbar-brand"><i class="fa fa-cube"></i>Irri<b>great</b></a>
     <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
@@ -155,7 +155,7 @@ body {
                                  stroke-linejoin="round" class="feather feather-columns mr-1 icon-md">
                                 <path d="M12 3h7a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-7m0-18H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h7m0-18v18"></path>
                             </svg>
-                            <a class="pt-1px d-none d-md-block" href="#">Timeline</a>
+                            <a class="pt-1px d-none d-md-block" href="{% url 'irrigreatapp:timeLine' %}">Timeline</a>
                         </li>
                         <li class="header-link-item ml-3 pl-3 border-end d-flex align-items-center" style="min-width:12rem;">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
