--- a/irrigreatapp/templates/showPost.html
+++ b/irrigreatapp/templates/showPost.html
@@ -74,6 +74,7 @@
     </div>
     <div class="card-body">
         <p class="mb-3 tx-14">{{p.caption|safe}}</p>
+        <a href="{% url  'irrigreatapp:fullBlog' p.id %}"><small>View More</small></a>
         <img class="img-fluid" src="http://127.0.0.1:8000/media/{{p.image}}" alt="{{p.image}}">
     </div>
     <div class="card-footer">
@@ -216,13 +217,6 @@
             .img-xs{
                 object-fit:cover;
             }
-
-
-
-
-
-
-
         </style>
         <div class="container">
             <div class="row">
