--- a/irrigreatapp/templates/fullBlog.html
+++ b/irrigreatapp/templates/fullBlog.html
@@ -1,10 +1,315 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'blogbase.html' %}
+{% load static %}
+
+{% block baseBody %}
+<link href="{% static 'css/style.css' %}" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+<script src="{% static 'js/bootstrap.bundle.js' %}"></script>
+
+<style>
+     img.profile-photo-md {
+                height: 50px;
+                width: 50px;
+                object-fit:cover;
+                border-radius: 50%;
+            }
+</style>
+<!-- Page content-->
+<div class="container" style="margin-top: 6rem;">
+    <div class="row">
+        <div class="col-lg-8">
+            <!-- Post content-->
+            <article>
+                <!-- Post header-->
+                <header class="mb-4">
+                    <!-- Post title-->
+                    <h1 class="fw-bolder mb-1">{{post.caption}}</h1>
+                    <!-- Post meta content-->
+                    <div class="text-muted fst-italic mb-2">Posted on {{post.creatDate}} by {{post.user_id.fname}}</div>
+                    <!-- Post categories-->
+                    <a class="badge bg-secondary text-decoration-none link-light" href="#!">Web Design</a>
+                    <a class="badge bg-secondary text-decoration-none link-light" href="#!">Freebies</a>
+                </header>
+                <!-- Preview image figure-->
+                <figure class="mb-4"><img class="img-fluid rounded"
+                                          src="http://127.0.0.1:8000/media/{{post.image}}" alt="{{post.image}}" style="height:35rem;max-height:50rem; object-fit:cover;" /></figure>
+                <!-- Post content-->
+                <section class="mb-5">
+                    <p class="fs-5 mb-4">{{post.caption|safe}}</p>
+
+                </section>
+            </article>
+            <!-- Comments section-->
+            <section class="mb-5">
+                <div class="card bg-light">
+                    <div class="card-body">
+                        <!-- Comment with nested comments-->
+                           <style>
+            /*==================================================
+              Post Contents CSS
+              ==================================================*/
+
+            .post-content{
+              background: #f8f8f8;
+              border-radius: 4px;
+              width: 100%;
+              border: 1px solid #f1f2f2;
+              margin-bottom: 20px;
+              overflow: hidden;
+              position: relative;
+            }
+
+            .post-content img.post-image, video.post-video, .google-maps{
+              width: 100%;
+              height: auto;
+            }
+
+            .post-content .google-maps .map{
+              height: 300px;
+            }
+
+            .post-content .post-container{
+              padding: 20px;
+            }
+
+            .post-content .post-container .post-detail{
+              margin-left: 65px;
+              position: relative;
+            }
+
+            .post-content .post-container .post-detail .post-text{
+              line-height: 24px;
+              margin: 0;
+            }
+            .post-text{
+                display: flex;
+                align-items: center;
+            }
+            .post-content .post-container .post-detail .reaction{
+              position: absolute;
+              right: 0;
+              top: 0;
+            }
+
+            .post-content .post-container .post-detail .post-reply{
+              display: inline-flex;
+              margin: 10px auto;
+              width: 100%;
+              padding:8px 10px;
+            }
+            .post-comment{
+
+            }
+            .post-content .post-container .post-detail .post-comment img.profile-photo-sm{
+              margin-right: 10px;
+            }
+
+            .post-content .post-container .post-detail .post-comment .form-control{
+              height: 30px;
+              border: 1px solid #ccc;
+              box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+              margin: 7px 0;
+              min-width: 0;
+            }
+
+            img.profile-photo-md {
+                height: 50px;
+                width: 50px;
+                object-fit:cover;
+                border-radius: 50%;
+            }
+
+            img.profile-photo-sm {
+                object-fit:cover;
+                height: 40px;
+                width: 40px;
+                border-radius: 50%;
+            }
+
+            .text-green {
+                color: #8dc63f;
+            }
+
+            .text-red {
+                color: #ef4136;
+            }
+
+            .following {
+                color: #8dc63f;
+                font-size: 12px;
+                margin-left: 20px;
+            }
+
+
+            .line-divider{
+                display:block;
+            }
+
+            .img-xs{
+                object-fit:cover;
+            }
+        </style>
+                         {% if not post.comments.all %}
+                    <h5 class="text-center text-muted">Be First commenter</h5>
+                    {% else %}
+                    <div class="post-content">
+                        {% for comment in post.comments.all %}
+                        {% if comment.parent == None %}
+                        <div class="post-container">
+                            <img src="http://127.0.0.1:8000/media/{{comment.commenter_id.image}}" alt="{{comment.commenter_id.fname}}"
+                                 class="profile-photo-md pull-left">
+                            <div class="post-detail">
+                                <div class="user-info">
+                                    <h5><a href="/irrigreatapp/friendprofile/{{comment.commenter_id.id}}" class="profile-link">{{ comment.commenter_id.fname }} {{comment.commenter_id.lname}}</a>
+                                        <span
+                                                class="following">following</span></h5>
+                                    <p class="text-muted">Published a comment on {{ comment.creatDate.date }}</p>
+                                </div>
+                                <div class="reaction">
+                                    <a class="btn text-green"><i class="fa fa-thumbs-up"></i> 13</a>
+                                    <a class="btn text-red"><i class="fa fa-thumbs-down"></i> 0</a>
+                                </div>
+                                <!-- <div class="line-divider"></div>-->
+                                <div class="post-comment rounded">
+                                    <p> {{ comment.body }}</p>
+                                    <div class="line-divider"></div>
+                                    {% if reply.parent == comment.parent %}
+                                    {% for reply in post.comments.all %}
+                                    {% if reply.parent != None %}
+                                    {% for r in comment.parents.all %}
+                                    <h1 class=" border">{{r.body}}</h1>
+                                    {% endfor %}
+                                    {% endif %}
+                                    {% endfor %}
+                                    {% endif %}
+                                </div>
+                                <!-- Collaps comment start -->
+                                <p>
+                                    <a class="" data-bs-toggle="collapse" href="#commentReply{{ comment.id }}"
+                                       role="button" aria-expanded="false" aria-controls="commentReply{{ comment.id }}">
+                                        Reply
+                                    </a>
+                                </p>
+                                <div class="collapse" id="commentReply{{ comment.id }}">
+                                    <div class="post-comment">
+                                        <div class="post-text">
+                                            <img src="http://127.0.0.1:8000/media/{{logeduser.image}}" alt="{{logeduser.fname}}"
+                                                 class="profile-photo-sm mr-3">
+                                            <form action="/irrigreatapp/postComment" method="post" class="w-100">
+                                                {% csrf_token %}
+                                                <div class="input-group input-group-lg mb-3">
+                                                    <input readonly hidden type="text" value="{{comment.id}}"
+                                                           name="comment_id">
+                                                    <input readonly hidden type="text" value="{{p.id}}" name="post_id">
+                                                    <input readonly hidden type="text" value="{{p.user_id.id}}" name="blogger_id">
+                                                    <input readonly hidden type="text" value="{{logeduser.id}}" name="commenter_id">
+                                                    <textarea class="form-control" placeholder="Post a comment"
+                                                              aria-describedby="button-comment-reply"
+                                                              name="comment_body"></textarea>
+                                                    <button class="btn btn-outline-secondary" type="submit"
+                                                            id="button-comment-reply">Reply
+                                                    </button>
+                                                </div>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- Collaps comment End -->
+                                <div class="line-divider"></div>
+                            </div>
+                        </div>
+                        {% endif %}
+                        {% endfor %}
+                    </div>
+                    {% endif %}
+                        <div class="post-text">
+                        <img src="http://127.0.0.1:8000/media/{{logeduser.image}}" alt="{{logeduser.fname}}"
+                             class="profile-photo-sm mr-3">
+                        <form action="/irrigreatapp/postComment" method="post" class="w-100">
+                            {% csrf_token %}
+                            <div class="input-group input-group-lg mb-3">
+                                <input readonly hidden type="text" value="{{comment.id}}" name="comment_id">
+                                <input readonly hidden type="text" value="{{post.id}}" name="post_id">
+                                <input readonly hidden type="text" value="{{post.user_id.id}}" name="blogger_id">
+                                <input readonly hidden type="text" value="{{ logeduser.id }}" name="commenter_id">
+                                <textarea class="form-control" placeholder="Post a comment"
+                                          aria-describedby="button-comment" name="comment_body"></textarea>
+                                <button class="btn btn-outline-secondary" type="submit" id="button-comment">Comment
+                                </button>
+                            </div>
+                        </form>
+                    </div>
+                        <!-- Single comment-->
+                    </div>
+                </div>
+            </section>
+        </div>
+        <!-- Side widgets-->
+        <div class="col-lg-4">
+            <!-- Search widget-->
+            <div class="card mb-4">
+                <div class="card-header">Search</div>
+                <div class="card-body">
+                    <div class="input-group">
+                        <input class="form-control" type="text" placeholder="Enter search term..."
+                               aria-label="Enter search term..." aria-describedby="button-search"/>
+                        <button class="btn btn-primary" id="button-search" type="button">Go!</button>
+                    </div>
+                </div>
+            </div>
+            <!-- Categories widget-->
+            <div class="card mb-4">
+                <div class="card-header">Categories</div>
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <ul class="list-unstyled mb-0">
+                                <li><a href="#!">Web Design</a></li>
+                                <li><a href="#!">HTML</a></li>
+                                <li><a href="#!">Freebies</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-6">
+                            <ul class="list-unstyled mb-0">
+                                <li><a href="#!">JavaScript</a></li>
+                                <li><a href="#!">CSS</a></li>
+                                <li><a href="#!">Tutorials</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Side widget-->
+            <div class="card mb-4">
+                <div class="card-header">Side Widget</div>
+                <div class="card-body">You can put anything you want inside of these side widgets. They are easy to use,
+                    and feature the Bootstrap 5 card component!
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Bootstrap core JS-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<script type="text/javascript">
+        $(document).on('submit','#post-Like{{p.id}}',function(e){
+                e.preventDefault();
+                console.log('Liked{{p.id}}')
+                $.ajax({
+                    type:'POST',
+                    url:'/irrigreatapp/like/{{p.id}}',
+                    data:{
+                        path:$('.path').val(),
+                        {{p.id}}:$('#{{p.id}}').val(),
+                        csrfmiddlewaretoken:$('input[name= csrfmiddlewaretoken]').val(),
+                    },
+                    success:function(data){
+                        $('#{{p.id}}span').html(data);
+                    }
+                })
+        })
+
+
+</script>
+{% endblock baseBody %}
